--- a/alibaixiu/public/admin/categories.html
+++ b/alibaixiu/public/admin/categories.html
@@ -34,18 +34,19 @@
       </div> -->
             <div class="row">
                 <div class="col-md-4">
-                    <form>
+                    <form id="cForm">
                         <h2>添加分类</h2>
                         <div class="form-group">
                             <label>名称</label>
-                            <input class="form-control" type="text" placeholder="请输入分类名称">
+                            <input class="form-control" type="text" placeholder="请输入分类名称" name="title" id="title">
                         </div>
                         <div class="form-group">
                             <label>图标</label>
-                            <input class="form-control" type="text" placeholder="请输入分类图标类名">
+                            <input class="form-control" type="text" placeholder="请输入分类图标类名" name="className" id="className">
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary" type="submit">添加</button>
+                            <button class="btn btn-primary" type="submit" id="cAdd">添加</button>
+                            <button class="btn btn-primary" type="submit" id="cEdit" style="display: none;">修改</button>
                         </div>
                     </form>
                 </div>
@@ -58,11 +59,12 @@
                             <tr>
                                 <th class="text-center" width="40"><input type="checkbox"></th>
                                 <th>名称</th>
+                                <th>图标类名</th>
                                 <th class="text-center" width="100">操作</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <!-- <tr>
                                 <td class="text-center"><input type="checkbox"></td>
                                 <td>奇趣事</td>
                                 <td class="text-center">
@@ -85,7 +87,7 @@
                                     <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
                                     <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
                                 </td>
-                            </tr>
+                            </tr> -->
                         </tbody>
                     </table>
                 </div>
@@ -131,6 +133,22 @@
     </div>
     <script src="../assets/vendors/jquery/jquery.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+    <script src="../assets/js/category.js"></script>
+    <script src="../assets/vendors/art-template/template-web.js"></script>
+    <script type="text/template" id="cTpl">
+        {{each list}}
+        <tr>
+            <td class="text-center"><input type="checkbox"></td>
+            <td>{{$value.title}}</td>
+            <td>{{$value.className}}</td>
+            <td class="text-center" data-id="{{$value._id}}">
+                <a href="javascript:;" class="btn btn-info btn-xs edit">编辑</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs del">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+
     <script>
         NProgress.done()
     </script>
