--- a/alibaixiu/public/admin/posts.html
+++ b/alibaixiu/public/admin/posts.html
@@ -63,7 +63,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!-- <tr>
                         <td>随便一个名称</td>
                         <td>小小</td>
                         <td>潮科技</td>
@@ -95,7 +95,7 @@
                             <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
                             <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
                         </td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
@@ -140,6 +140,23 @@
 
     <script src="../assets/vendors/jquery/jquery.js"></script>
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+    <script src="../assets/js/posts.js"></script>
+    <script src="../assets/vendors/art-template/template-web.js"></script>
+    <script type="text/html" id="pTpl">
+        {{each records}}
+        <tr>
+            <td>{{$value.title}}</td>
+            <td>{{$value.author.nickName}}</td>
+            <td>{{$value.category.title}}</td>
+            <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
+            <td class="text-center">{{$value.state==0?'草稿':'已发布'}}</td>
+            <td class="text-center">
+                <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
     <script>
         NProgress.done()
     </script>
