--- a/alibaixiu/public/admin/users.html
+++ b/alibaixiu/public/admin/users.html
@@ -29,9 +29,9 @@
                 <h1>用户</h1>
             </div>
             <!-- 有错误信息时展示 -->
-            <!-- <div class="alert alert-danger">
-        <strong>错误！</strong>发生XXX错误
-      </div> -->
+            <!-- <div class="alert alert-danger" style="display: none;">
+                <strong>错误！</strong>发生XXX错误
+            </div> -->
             <div class="row">
                 <div class="col-md-4" id="modifyBox">
                     <form id="userForm">
@@ -194,7 +194,7 @@
             <td>{{$value.role=="admin"?'超级管理员':'普通用户'}}</td>
             <td class="text-center" data-id="{{@$value._id}}">
                 <a href="javascript:;" class="btn btn-default btn-xs edit">编辑</a>
-                <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs del">删除</a>
             </td>
         </tr>
         {{/each}}
