--- a/alibaixiu/public/admin/post-add.html
+++ b/alibaixiu/public/admin/post-add.html
@@ -1,3 +1,9 @@
+<script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        location.href = 'login.html';
+    }
+</script>
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -72,6 +78,7 @@
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" type="button" id="pAdd">保存</button>
+                        <button class="btn btn-primary" type="button" id="pEdit" style="display: none;">修改</button>
                     </div>
                 </div>
             </form>
