--- a/alibaixiu/public/admin/categories.html
+++ b/alibaixiu/public/admin/categories.html
@@ -1,3 +1,9 @@
+<script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        location.href = 'login.html';
+    }
+</script>
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -51,9 +57,9 @@
                     </form>
                 </div>
                 <div class="col-md-8">
-                    <!-- <div class="page-action">
-            <a class="btn btn-danger btn-sm" href="javascript:;">批量删除</a>
-          </div> -->
+                    <div class="page-action">
+                        <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none;">批量删除</a>
+                    </div>
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
