--- a/alibaixiu/public/admin/posts.html
+++ b/alibaixiu/public/admin/posts.html
@@ -1,3 +1,9 @@
+<!-- <script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        location.href = 'login.html';
+    }
+</script> -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 
@@ -33,22 +39,18 @@
                 <!-- show when multiple checked -->
                 <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
                 <form class="form-inline">
-                    <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
+                    <select name="category" class="form-control input-sm" id="category">
+            <option value="all">所有分类</option>
           </select>
-                    <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+                    <select name="state" class="form-control input-sm" id="s">
+            <option value="all">所有状态</option>
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
-                    <button class="btn btn-default btn-sm">筛选</button>
+                    <button class="btn btn-default btn-sm" type="button" id="cSearch">筛选</button>
                 </form>
-                <ul class="pagination pagination-sm pull-right">
-                    <li><a href="#">上一页</a></li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">下一页</a></li>
+                <ul class="pagination pagination-sm pull-right" id="page">
+
                 </ul>
             </div>
             <table class="table table-striped table-bordered table-hover">
@@ -142,6 +144,7 @@
     <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
     <script src="../assets/js/posts.js"></script>
     <script src="../assets/vendors/art-template/template-web.js"></script>
+    <!-- 文章列表数据模板 -->
     <script type="text/html" id="pTpl">
         {{each records}}
         <tr>
@@ -151,10 +154,26 @@
             <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
             <td class="text-center">{{$value.state==0?'草稿':'已发布'}}</td>
             <td class="text-center">
-                <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-                <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+                <a href="post-add.html?id={{@$value._id}}" class="btn btn-default btn-xs edit">编辑</a>
+                <a href="javascript:;" class="btn btn-danger btn-xs del" data-id="{{@$value._id}}">删除</a>
             </td>
         </tr>
+        {{/each}}
+    </script>
+    <!-- 分页模板 -->
+    <script type="text/template" id="pageTpl">
+        {{if page>1}}
+        <li><a href="javascript:;" onclick="pageChange({{page-1}})">上一页</a></li>
+        {{/if}} {{each display}}
+        <li class="{{$value ==page ? 'active':''}}"><a href="javascript:;" onclick="pageChange({{$value}})">{{$value}}</a></li>
+        {{/each}} {{if page
+        < pages}} <li><a href="javascript:;" onclick="pageChange({{page+1}})">下一页</a></li>
+            {{/if}}
+    </script>
+    <!-- 分类列表下拉框模板 -->
+    <script type="text/template" id="categoryTpl">
+        {{each data}}
+        <option value="{{@$value._id}}">{{$value.title}}</option>
         {{/each}}
     </script>
     <script>
